--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,12 @@
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
     "ember-simple-auth": "0.7.1",
-    "ember-oauth2": "~0.5.3"
+    "ember-oauth2": "~0.5.3",
+    "bootstrap": "~3.3.0",
+    "emberfire": "~1.3.1"
+  },
+  "resolutions": {
+    "loader.js": "2.1.1",
+    "ember": "~1.8.1"
   }
 }
