--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "ember-simple-auth": "0.7.1",
     "ember-oauth2": "~0.5.3",
     "bootstrap": "~3.3.0",
-    "emberfire": "~1.3.1"
+    "emberfire": "~1.3.1",
+    "fontawesome": "~4.2.0",
+    "momentjs": "~2.8.3"
   },
   "resolutions": {
     "loader.js": "2.1.1",
