--- a/.jshintrc
+++ b/.jshintrc
@@ -2,12 +2,10 @@
   "predef": [
     "document",
     "window",
-    "-Promise",
-    "Firebase",
-    "gapi"
+    "-Promise"
   ],
-  "browser" : true,
-  "boss" : true,
+  "browser": true,
+  "boss": true,
   "curly": true,
   "debug": false,
   "devel": true,
